[tool.poetry]
name = "wtforms-bootstrap5"
version = "0.1.6"
description = "Simple library for rendering WTForms in HTML as Bootstrap 5 form controls"
authors = ["Fang-Pen Lin <fangpen@launchplatform.com>"]
license = "MIT"
repository = "https://github.com/LaunchPlatform/wtforms-bootstrap5"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
WTForms = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
lxml = "^4.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
